<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Эмулятор отправки резюме</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Отправить резюме</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Отправка ответа на резюме</string>
    <string name="hello_world">Hello world!</string>
 	<string name="full_name">Фамилия Имя Отчество</string>
 	<string name="born_date">Дата рождения</string>
	<string name="sex">Пол</string>
	<string name="dolg">Должность</string>
	<string name="salary">Зарплата</string>
	<string name="phone">Номер телефона</string>
	<string name="email">E-Mail</string>
	<string name="answer">Ответ соискателю:</string>
	<string name="answerButtonText">Отправить ответ</string>
	<string name="answerDialogTitle">Ответ работодателя</string>
	<string name="yes">Ок</string>

		
	<string-array name="sex_array">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
	
	
</resources>
